--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,5 +2,18 @@
   "extends": "./tsconfig.base.json",
   "compileOnSave": false,
   "files": [],
-  "references": []
+  "references": [
+    {
+      "path": "./apps/ecommerce-shell"
+    },
+    {
+      "path": "./apps/header"
+    },
+    {
+      "path": "./apps/products"
+    },
+    {
+      "path": "./apps/cart"
+    }
+  ]
 }
