feat: add zephyr-rspack-plugin and update rspack configurations

--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
   "dependencies": {
     "react": "19.0.0",
     "react-dom": "19.0.0",
-    "react-router-dom": "6.29.0"
+    "react-router-dom": "6.29.0",
+    "zephyr-rspack-plugin": "^0.0.39"
   }
 }
